Refactor org2anki into converter and orgparse modules
Improves the new org2anki implementation by defining two modules:
converter.py and orgparse.py. Within them, the code has been refactored
into more modular classes to improve maintainability: Cloze, Converter,
Flashcard, and OrgParser.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,12 @@
 [flake8]
 exclude = .git,.tox,*/migrations/*,venv
 max-line-length = 88
-extend-ignore = E501,F405
+extend-ignore = E501
 
 [isort]
 profile = black
 combine_as_imports = true
 skip = venv
 default_section = THIRDPARTY
-known_first_party = deflance
-known_django = django,django_q
-sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
+known_first_party = org2anki
+sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
